--- a/gb/15/9/23/n4533859.md
+++ b/gb/15/9/23/n4533859.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>江迫害法轮功成沉重包袱 习抓江可解困局</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/09/1509230208512775-600x400.jpg" />
 <h6>江泽民迫害上亿人，恶名远播。抓江可缓国际压力。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2015年09月23日讯】<b><ahref="https://github.com/wlrgim293/djy/blob/master/gb/15/9/22/n4533064.md#1"target=_blank>系列分析报导之一</a></b><br />（接上文）</p>
+	<p>【大纪元2015年09月23日讯】<b><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/9/22/n4533064.md#1"target=_blank>系列分析报导之一</a></b><br />（接上文）</p>
 <p>（大纪元记者郭惠报导）外面曾流传一种说法，薄熙来在2012年4月10日被撤销政治局委员职务后，被双规于河北省廊坊市三河县燕郊镇的燕城监狱，但具体不叫监房，而是对外封闭的“高级招待所”。燕城监狱系近年新建，与秦城监狱级别一致，中共内部称为“秦城二期”。据说，其医疗设施远远高于秦城。</p>
 <p>有中共党内级别不低的退休人士曾开玩笑说：“这么高级的设施应当是为江总准备的，进不进没法说，至少算个预备吧。”</p>
-<p>虽然这是玩笑话，但自从<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>与中共相互利用，发动了这场历时16年多并且至今仍在持续的迫害，从根本上注定了江泽民团伙及共产党自己的倒台。</p>
-<p>至今持续多年的中共内斗实情因王立军逃美领馆事件而引爆并被外界所知，事实上都是以法轮功为核心问题而展开。像历次对正教信仰的迫害一样，<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>和中共勾结迫害法轮功给国家和民族带来深重灾难，给后续的执政者带来沉重包袱。分析人士认为，只有抓了江泽民，解体了中共，恢复法轮功的名誉，这样才能破除在中国大陆十几年来加在亿万法轮功学员身上的枷锁。至少先抓了江泽民，便可破乱局，才可稳定民心。</p>
+<p>虽然这是玩笑话，但自从<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>与中共相互利用，发动了这场历时16年多并且至今仍在持续的迫害，从根本上注定了江泽民团伙及共产党自己的倒台。</p>
+<p>至今持续多年的中共内斗实情因王立军逃美领馆事件而引爆并被外界所知，事实上都是以法轮功为核心问题而展开。像历次对正教信仰的迫害一样，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>和中共勾结迫害法轮功给国家和民族带来深重灾难，给后续的执政者带来沉重包袱。分析人士认为，只有抓了江泽民，解体了中共，恢复法轮功的名誉，这样才能破除在中国大陆十几年来加在亿万法轮功学员身上的枷锁。至少先抓了江泽民，便可破乱局，才可稳定民心。</p>
 <p><h2>为转移矛盾 江曾把法轮功作为“国内假想敌”</h2>
 <p>踏着“六四”学生鲜血爬上中共最高权力位子的江泽民一开始就权力不稳。上世纪90年代的最后两年，中国大陆进入“多事之秋”。1998年，亚洲金融风暴愈演愈烈；江的心腹贾庆林被举报，时任总理朱镕基誓言要一查到底；1999年，“六四”正逢十周年纪念日；中美关系的恶化；国内民族主义抬头??，这一切都把江置于一个“不安全”的境地。当时掌权的江泽民随时担心危机爆发、自己的位子坐不稳。</p>
 <p>为转移矛盾、化解危机，作为江泽民“军师”的曾庆红给江出了“树立国内假想敌”的策略，目标定向了人数日益众多、善良和平的法轮功修炼团体。为此，江与曾利用了当年中共驻南斯拉夫使馆被炸的“五八”事件，以此挟持整个中共政治局，为其在当年7月份公开镇压法轮功铺路。</p>
@@ -53,8 +53,8 @@
 <p>事后，据被拘捕的舰艇官员供认，命令是江泽民下达的，江泽民的军中心腹、海军司令员张定发指挥手下人干的。几个月后张定发在北京死了。</p>
 <p>此后中共高层的内斗越发激烈。</p>
 <p>《真实的江泽民》一书中提到，江一直对胡锦涛不放心，其中原因之一是后上来的胡不愿意替江背镇压法轮功的黑锅，这让江一直在寻找可以接替胡的心腹人选。</p>
-<p>太子党薄熙来因在当地镇压法轮功积极被看好，但江最紧急的是在2007年阻止胡看好的李克强上台。由于江系自己手里没有人选可以在2007年起到阻击作用，作为缓兵之计，<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>被江、胡双方接受。习近平对江泽民来说，最大问题同样是没有手握迫害法轮功的血债，因此无法得到江最终的信任。</p>
-<p>书中说，<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>上台只是江、曾的权宜之计。江、曾的算盘是先在2007年阻止胡锦涛的接班人上台，在2007年到2012年期间内，让江、曾真正的接班人薄熙来锻练成熟、取得威望和权势，在2012年的中共“十八大”上至少得到常委和中央政法委书记的位置。</p>
+<p>太子党薄熙来因在当地镇压法轮功积极被看好，但江最紧急的是在2007年阻止胡看好的李克强上台。由于江系自己手里没有人选可以在2007年起到阻击作用，作为缓兵之计，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>被江、胡双方接受。习近平对江泽民来说，最大问题同样是没有手握迫害法轮功的血债，因此无法得到江最终的信任。</p>
+<p>书中说，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>上台只是江、曾的权宜之计。江、曾的算盘是先在2007年阻止胡锦涛的接班人上台，在2007年到2012年期间内，让江、曾真正的接班人薄熙来锻练成熟、取得威望和权势，在2012年的中共“十八大”上至少得到常委和中央政法委书记的位置。</p>
 <p>江、曾预计在中共“十八大”后再经过两年左右的时间，利用时任重庆市委书记的薄熙来通过“唱红打黑”取得的对全国的挟持和操控，把“重庆模式”推向全国，再利用薄熙来掌控的全国政法委、武警部队，以及全国众多被薄熙来掌握的军队人缘、江泽民在军中的力量等，罢免甚至逮捕习近平等人，到时候中国又是江、曾的天下。</p>
 <p>报导称，实施这个政变计划，主要靠的就是当时已经是中共中央政法委书记的周永康和时任重庆市委书记薄熙来。</p>
 <p>周、薄密谋政变的黑幕早已为外界所熟知。这点也被具有半中共官方背景的香港《凤凰周刊》的报导所证实。</p>
@@ -86,7 +86,7 @@
 <p>石久天表示，中国政局的核心就在于迫害法轮功带来的沉重包袱。江泽民集团对法轮功实施的“名誉上搞臭、经济上搞垮、肉体上消灭”的灭绝政策，甚至活摘法轮功学员器官，给众多法轮功学员及其家属带来惨烈的伤痛和巨大的苦难。习近平阵营要想治国，涉及几亿人的法轮功问题根本绕不过去，而江泽民集团一方不愿也不可能在法轮功问题上让步。</p>
 <p>石久天说，只有抓捕了江泽民、解体了中共、并恢复法轮功的名誉，才能从根本上解决法轮功的问题，中国才能回到一个正常的国家状态，政治上的激烈斗争才能成为过去，“不然，当局的退路也将越来越少，与江泽民集团的争斗可能会更加激烈。”#</p>
 <p>（接下文）</p>
-<p><b><ahref="https://github.com/wlrgim293/djy/blob/master/gb/15/9/24/n4534757.md#1"target=_blank>系列分析报导之三</a></b></p>
+<p><b><ahref="https://github.com/hxcaik307/djy/blob/master/gb/15/9/24/n4534757.md#1"target=_blank>系列分析报导之三</a></b></p>
 <p>责任编辑：林锐</p>
 <p>
 	
@@ -94,36 +94,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/3/24/n4394884.md#1">江泽民不利消息四起 分析：抓江的两种情形</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/4/8/n4406726.md#1">习近平抓江泽民密友 或给江88岁生日警告</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/4/12/n4409652.md#1">传郭伯雄10日被抓  被移至秘密地点</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/9/n4476217.md#1">习近平的股市信心战 评：抓江是重大利好</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/24/n4394884.md#1">江泽民不利消息四起 分析：抓江的两种情形</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/4/8/n4406726.md#1">习近平抓江泽民密友 或给江88岁生日警告</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/4/12/n4409652.md#1">传郭伯雄10日被抓  被移至秘密地点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/9/n4476217.md#1">习近平的股市信心战 评：抓江是重大利好</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498401.md#1" target="_blank">孙盛起：撒旦横行，圣婴只能死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/23/n4533859.htm">江迫害法轮功成沉重包袱 习抓江可解困局</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/23/n4533859.htm">江迫害法轮功成沉重包袱 习抓江可解困局</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/15/9/23/n4533859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/15/9/23/n4533859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
